--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ name = "echo"
 path = "src/bin/echo.rs"
 
 [[bin]]
-name = "unique-id"
-path = "src/bin/unique-id.rs"
+name = "unique-ids"
+path = "src/bin/unique-ids.rs"
+
+[[bin]]
+name = "broadcast"
+path = "src/bin/broadcast.rs"
 
 [dependencies]
 anyhow = "1.0"
